# realworld-tide

./: .env  .env.test  .gitignore  .travis.yml  Cargo.toml  Makefile.toml  README.md  diesel.toml
configuration/: base.yml  development.yml  test.yml
migrations/2018-11-23-135512_create_users/: up.sql
migrations/2018-11-23-135557_create_articles/: down.sql  up.sql
migrations/2019-12-26-145943_create_favorites/: up.sql
migrations/2019-12-28-104743_create_followers/: up.sql
migrations/2019-12-28-121549_create_comments/: up.sql
scripts/: init_db.sh  run_tests.sh  wait_for_postgres.sh
src/: auth.rs  conduit.rs  configuration.rs  db.rs  endpoints.rs  extractors.rs  lib.rs  main.rs  middleware.rs  models.rs  nightly_rls.sh  query_string.rs  schema.rs  test_helpers.rs
src/application/: Cargo.toml
src/application/src/: configuration.rs  main.rs
src/conduit/: articles.rs  articles_repository.rs  comments.rs  errors.rs  favorites.rs  followers.rs  mod.rs  shims.rs  users.rs
src/db/: Cargo.toml  db.rs  mod.rs  models.rs  repository.rs  schema.rs
src/db/queries/: articles.rs  users.rs
src/db/src/: connection.rs  lib.rs  models.rs  repository.rs  schema.rs  shims.rs
src/db/src/queries/: articles.rs  comments.rs  favorites.rs  followers.rs  mod.rs  users.rs
src/db/tests/: conduit_articles.rs  conduit_favorites.rs  conduit_users.rs
src/db/tests/helpers/: mod.rs  test_db.rs
src/domain/: Cargo.toml  errors.rs  mod.rs  repositories.rs
src/domain/articles/: errors.rs  models.rs
src/domain/comments/: mod.rs  models.rs
src/domain/src/: errors.rs  lib.rs  repositories.rs
src/domain/src/articles/: errors.rs  models.rs
src/domain/src/commands/: comments.rs  mod.rs
src/domain/src/comments/: errors.rs  models.rs
src/domain/src/users/: errors.rs  models.rs
src/domain/tests/: domain_articles.rs
src/domain/tests/helpers/: generate.rs  mod.rs  test_db.rs
src/domain/users/: errors.rs  models.rs
src/test_helpers/: mod.rs  test_server.rs
src/web/: Cargo.toml  app.rs  articles.rs  middleware.rs  mod.rs  temp.json  users.rs
src/web/articles/: delete.rs  favorite.rs  feed.rs  find.rs  insert.rs  list.rs  mod.rs  responses.rs  tags.rs  update.rs
src/web/comments/: create.rs  delete.rs  get.rs  responses.rs
src/web/profiles/: follow.rs  get.rs  responses.rs
src/web/src/: app.rs  auth.rs  errors.rs  lib.rs  middleware.rs
src/web/src/articles/: delete.rs  favorite.rs  feed.rs  find.rs  insert.rs  list.rs  responses.rs  tags.rs  update.rs
src/web/src/comments/: create.rs  delete.rs  get.rs  mod.rs  responses.rs
src/web/src/profiles/: follow.rs  get.rs  mod.rs  responses.rs
src/web/src/users/: current_user.rs  login.rs  register.rs  responses.rs  update.rs
src/web/tests/: web_articles.rs  web_comments.rs  web_profiles.rs  web_users.rs
src/web/tests/helpers/: generate.rs  mod.rs  test_db.rs  test_server.rs
src/web/users/: current_user.rs  login.rs  mod.rs  register.rs  responses.rs  update.rs  users.rs
tests/: conduit_articles.rs  conduit_favorites.rs  conduit_users.rs  domain_articles.rs  web_articles.rs  web_comments.rs  web_profiles.rs  web_users.rs
tests/helpers/: generate.rs  mod.rs  test_db.rs  test_server.rs
