[package]
name = "realworld-tide"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"

[[bin]]
name = "realworld-tide"
path = "src/main.rs"

[dependencies]
tide = { version = "0.5" }
diesel = { version = "1.4", features = ["postgres", "extras"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
serde_urlencoded = "0.5.4"
chrono = { version = "0.4.6", features = ["serde"] }
http = "0.1"
futures_01 = { version = "0.1.25", package = "futures" }
tokio-threadpool = "*"
log = "0.4.0"
env_logger = "0.6.0"
jsonwebtoken = "5.0.1"
futures-util = "0.3.1"
config = "0.9.3"
async-std = "1"

[dependencies.futures]
features = ["compat"]
version = "0.3.1"

[dev-dependencies]
fake = "1.2.2"
serde_json = "1.0"
http-service = "0.3.1"
http-service-mock = "0.3.1"
futures-executor = { version = "0.3.1", features = ["thread-pool"] }
