[package]
name = "realworld-tide"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>"]
edition = "2018"

[[bin]]
name = "realworld-tide"
path = "src/main.rs"

[lib]
name = "realworld_tide"
path = "src/lib.rs"

[dependencies]
tide = { version = "0.5" }
diesel = { version = "1.4", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
serde_urlencoded = "0.5.4"
chrono = { version = "0.4.6", features = ["serde"] }
http = "0.1"
log = "0.4.0"
env_logger = "0.6.0"
jsonwebtoken = "5.0.1"
futures-util = "0.3.1"
config = "0.9.3"
async-std = "1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
itertools = "0.8.2"
getset = "0.0.9"
derive_more = "0.99.2"
thiserror = "1.0.9"

[dependencies.futures]
features = ["compat"]
version = "0.3.1"

[dev-dependencies]
fake = "1.2.2"
serde_json = "1.0"
http-service = "0.4"
http-service-mock = "0.4"
futures-executor = { version = "0.3.1", features = ["thread-pool"] }
serde_qs = "0.5.2"
