[package]
name = "realworld-db"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[lib]
name = "realworld_db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
serde = { version= "1", features = ["derive"] }
chrono = { version = "0.4.6", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
domain = { package = "realworld-domain", path = "../domain" }
anyhow = "1.0.26"

[dev-dependencies]
application = { package = "realworld-application", path = "../application"}
fake = "1.2.2"
log = "*"
