[package]
name = "realworld-db"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[lib]
name = "realworld_db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8.9"
serde = { version = "1.0.115", features = ["derive"] }
chrono = { version = "0.4.15", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
domain = { package = "realworld-domain", path = "../domain" }
anyhow = "1.0.32"

[dev-dependencies]
application = { package = "realworld-application", path = "../application"}
fake = "2.2.3"
log = "0.4.11"
