[package]
name = "realworld-web"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[lib]
name = "realworld_web"
path = "src/lib.rs"

[dependencies]
tide = { version = "0.6" }
serde = { version= "1", features = ["derive"] }
serde_urlencoded = "0.5.4"
chrono = { version = "0.4.6", features = ["serde"] }
http = "0.1"
log = "0.4.0"
jsonwebtoken = "5.0.1"
futures-util = "0.3.1"
async-std = "1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
itertools = "0.8.2"
domain = { package = "realworld-domain", path = "../domain" }

[dependencies.futures]
features = ["compat"]
version = "0.3.1"

[dev-dependencies]
application = { package = "realworld-application", path = "../application"}
db = { package = "realworld-db", path = "../db" }
diesel = { version = "1.4", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8"
fake = "1.2.2"
serde_json = "1.0"
http-service = "0.4"
http-service-mock = "0.4"
futures-executor = { version = "0.3.1", features = ["thread-pool"] }
serde_qs = "0.5.2"
