[package]
name = "realworld-web"
version = "0.1.0"
authors = ["colinbankier <colinbankier@gmail.com>", "LukeMathWalker <rust@lpalmieri.com>"]
edition = "2018"

[lib]
name = "realworld_web"
path = "src/lib.rs"

[dependencies]
tide = "0.13.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_urlencoded = "0.6.1"
chrono = { version = "0.4.15", features = ["serde"] }
http = "0.2.1"
log = "0.4.11"
jsonwebtoken = "7.2.0"
futures-util = "0.3.5"
async-std = "1.6.3"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
itertools = "0.9.0"
domain = { package = "realworld-domain", path = "../domain" }

[dependencies.futures]
features = ["compat"]
version = "0.3.5"

[dev-dependencies]
application = { package = "realworld-application", path = "../application"}
db = { package = "realworld-db", path = "../db" }
diesel = { version = "1.4.5", features = ["postgres", "extras", "uuidv07"] }
r2d2 = "0.8.9"
fake = "2.2.3"
serde_json = "1.0.57"
http-service = "0.5.0"
http-service-mock = "0.5.0"
futures-executor = { version = "0.3.5", features = ["thread-pool"] }
serde_qs = "0.7.0"
